--- a/NewKidsActivityProject/Views/Shared/_Layout.cshtml
+++ b/NewKidsActivityProject/Views/Shared/_Layout.cshtml
@@ -16,18 +16,55 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Children's Activity Planner", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
-            <div class="navbar-collapse collapse">
+            @Html.ActionLink("Children's Activity Planner", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            <!--</div>
+            <!---Original code<div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">--->
+            <!---<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-            <!---   <li>@Html.ActionLink("About", "About", "Home")</li>         TAKE THIS OUT FOR THE MOMENT--->
-            <!---   <li>@Html.ActionLink("Contact", "Contact", "Home")</li>     TAKE THIS OUT FOR THE MOMENT--->
+                    <!---   <li>@Html.ActionLink("About", "About", "Home")</li>         TAKE THIS OUT FOR THE MOMENT--->
+                    <!---   <li>@Html.ActionLink("Contact", "Contact", "Home")</li>     TAKE THIS OUT FOR THE MOMENT--->
+                    <!--<li class="dropdown open">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Dropdown <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>@Html.ActionLink("Activities", "Index", "Activity")</li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">One more separated link</a></li>
+                        </ul>
+                    </li>
                     <li>@Html.ActionLink("Activities", "Index", "Activity")</li>
                     <li>@Html.ActionLink("Kids", "Index", "Kid")</li>
                     <li>@Html.ActionLink("Enrollments", "Index", "Enrollment")</li>
-                </ul>
-            </div>
+                </ul>-->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <!--<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Link</a></li>--->
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="true">Activity <span class="carousel"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>@Html.ActionLink("List all activities", "AllActivities", "Activity")</li>
+                                <li>@Html.ActionLink("Add activity", "Create", "Activity")</li>
+                                <li>@Html.ActionLink("Delete activity","Delete","Activity")</li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Children <span class="carousel"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>@Html.ActionLink("List all children", "AllKids", "Kid")</li>
+                                <li>@Html.ActionLink("Add child", "Create", "Kid")</li>
+                                <li>@Html.ActionLink("Remove child", "Delete", "Kid")</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
         </div>
     </div>
     <div class="container body-content">
