--- a/NewKidsActivityProject/Views/Activity/Delete.cshtml
+++ b/NewKidsActivityProject/Views/Activity/Delete.cshtml
@@ -74,6 +74,13 @@
         <dd>
             @Html.DisplayFor(model => model.InstructorEmail)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
 
     </dl>
 
