--- a/NewKidsActivityProject/Views/Activity/Details.cshtml
+++ b/NewKidsActivityProject/Views/Activity/Details.cshtml
@@ -73,6 +73,13 @@
         <dd>
             @Html.DisplayFor(model => model.InstructorEmail)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
 
     </dl>
 </div>
