--- a/NewKidsActivityProject/Views/Activity/Index.cshtml
+++ b/NewKidsActivityProject/Views/Activity/Index.cshtml
@@ -35,6 +35,9 @@
         <th>
             @Html.DisplayNameFor(model => model.InstructorEmail)
         </th>
+        <th>
+            @Html.DisplayNameFor(Model => Model.Description)
+        </th>
         <th></th>
     </tr>
 
@@ -63,6 +66,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.InstructorEmail)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id = item.ActivityID }) |
