--- a/NewKidsActivityProject/Views/Shared/_Layout.cshtml
+++ b/NewKidsActivityProject/Views/Shared/_Layout.cshtml
@@ -63,6 +63,13 @@
                                 <li>@Html.ActionLink("Remove child", "Delete", "Kid")</li>
                             </ul>
                         </li>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Enrollments <span class="carousel"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>@Html.ActionLink("Activity Enrollments", "Enrollments", "Activity")</li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
         </div>
