Happy basic funtionality of kids drop down working. Changed yes/no properties in Kid and Enrollment entities to bool check boxes.

--- a/NewKidsActivityProject/Views/Shared/_Layout.cshtml
+++ b/NewKidsActivityProject/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li>@Html.ActionLink("List all children", "AllKids", "Kid")</li>
                                 <li>@Html.ActionLink("Add child", "Create", "Kid")</li>
-                                <li>@Html.ActionLink("Remove child", "Delete", "Kid")</li>
+                                <li>@Html.ActionLink("Remove child", "RemoveChild", "Kid")</li>
                             </ul>
                         </li>
                         </li>
