--- a/NewKidsActivityProject/Views/Activity/Create.cshtml
+++ b/NewKidsActivityProject/Views/Activity/Create.cshtml
@@ -36,6 +36,7 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TimeOfActivity, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TimeOfActivity, "", new { @class = "text-danger" })
+                <span class="help-block">Format for time: hh:mm:ss</span>
             </div>
         </div>
 
