--- a/NewKidsActivityProject/Views/Enrollment/Create.cshtml
+++ b/NewKidsActivityProject/Views/Enrollment/Create.cshtml
@@ -10,8 +10,8 @@
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
+
+      <div class="form-horizontal">
         <h4>Enrollment</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -34,7 +34,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PaymentDue, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.PaymentDue, htmlAttributes: new { @class = "form-control" })
+                @Html.EditorFor(model => model.PaymentDue, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PaymentDue, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -45,6 +45,7 @@
             </div>
         </div>
     </div>
+
 }
 
 <div>
