--- a/NewKidsActivityProject/Views/Kid/Create.cshtml
+++ b/NewKidsActivityProject/Views/Kid/Create.cshtml
@@ -44,13 +44,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DOB, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DOB, "", new { @class = "text-danger" })
+                <span class="help-block">DOB format yyyy/mm/dd</span>
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.MedicalIssues, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.MedicalIssues, htmlAttributes: new { @class = "form-control" })
+                @Html.EditorFor(model => model.MedicalIssues, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MedicalIssues, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -58,7 +59,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.MedicalIntervention, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.MedicalIntervention, htmlAttributes: new { @class = "form-control" })
+                @Html.EditorFor(model => model.MedicalIssues, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MedicalIntervention, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -97,7 +98,8 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <button type="reset" class="btn btn-default">Cancel</button>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </div>
         </div>
     </div>
