--- a/NewKidsActivityProject/Views/Kid/Details.cshtml
+++ b/NewKidsActivityProject/Views/Kid/Details.cshtml
@@ -47,7 +47,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.MedicalIssues)
+            @Html.DisplayFor(model => model.MedicalIssues.ToString())
         </dd>
 
         <dt>
@@ -55,7 +55,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.MedicalIntervention)
+            @Html.DisplayFor(model => model.MedicalIntervention.ToString())
         </dd>
 
         <dt>
