--- a/NewKidsActivityProject/Views/Kid/Edit.cshtml
+++ b/NewKidsActivityProject/Views/Kid/Edit.cshtml
@@ -46,13 +46,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DOB, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DOB, "", new { @class = "text-danger" })
+                <span class="help-block">DOB format yyyy/mm/dd</span>
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.MedicalIssues, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.MedicalIssues, htmlAttributes: new { @class = "form-control" })
+                @Html.EditorFor(model => model.MedicalIssues, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MedicalIssues, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -60,7 +61,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.MedicalIntervention, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.MedicalIntervention, htmlAttributes: new { @class = "form-control" })
+                @Html.EditorFor(model => model.MedicalIntervention, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MedicalIntervention, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -99,14 +100,15 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <button type="reset" class="btn btn-default">Cancel</button>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "AllKids")
 </div>
 
 @section Scripts {
