--- a/NewKidsActivityProject/Views/Kid/KidDetails.cshtml
+++ b/NewKidsActivityProject/Views/Kid/KidDetails.cshtml
@@ -66,12 +66,27 @@
         <dd>
             @Html.DisplayFor(model => model.ContactEmail)
         </dd>
-
+        <dd>
+            <table class="table">
+                <tr>
+                    <th>Enrollments</th>
+                </tr>
+                @foreach (var item in Model.Enrollments)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Activity.NameOfActivity)
+                        </td>
+                    </tr>
+                }
+            </table>
+        </dd>
     </dl>
 </div>
 <p>
+    @Html.ActionLink("Back to List", "AllKids")|
     @Html.ActionLink("Edit", "Edit", new { id = Model.KidID }) |
-    @Html.ActionLink("Back to List", "AllKids")
+    @Html.ActionLink("Remove Child", "Delete", new { id = Model.KidID })
 </p>
 
 
