--- a/NewKidsActivityProject/Views/Activity/Create.cshtml
+++ b/NewKidsActivityProject/Views/Activity/Create.cshtml
@@ -4,15 +4,13 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
-
+<h3><u>Add details for a new Activity</u></h3>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Activity</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -32,11 +30,11 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TimeOfActivity, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TimeOfActivityValue, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TimeOfActivity, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TimeOfActivity, "", new { @class = "text-danger" })
-                <span class="help-block">Format for time: hh:mm:ss</span>
+                @Html.EditorFor(model => model.TimeOfActivityValue, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TimeOfActivityValue, "", new { @class = "text-danger" })
+                <span class="help-block">Format for time: hh:mm am/pm</span>
             </div>
         </div>
 
@@ -89,14 +87,15 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <button type="reset" class="btn btn-default">Cancel</button>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "AllActivities")
 </div>
 
 @section Scripts {
