--- a/NewKidsActivityProject/Views/Kid/Delete.cshtml
+++ b/NewKidsActivityProject/Views/Kid/Delete.cshtml
@@ -4,11 +4,8 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3><b>Are you sure you want to remove this child?</b></h3>
+<h3><b><i><u>Are you sure you want to remove child: @Model.FirstName @Model.LastName?</u></i></b></h3>
 <div>
-    <h4>Kid</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
