--- a/NewKidsActivityProject/Views/Kid/RemoveChild.cshtml
+++ b/NewKidsActivityProject/Views/Kid/RemoveChild.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "RemoveChild";
 }
 
-<h4><u>Select child to be removed from child register</u></h4>
+<h3><u>Select child to be removed from register</u></h3>
 <h1> </h1>
 <table class="table-bordered">
     <tr>
