--- a/NewKidsActivityProject/Views/Activity/Delete.cshtml
+++ b/NewKidsActivityProject/Views/Activity/Delete.cshtml
@@ -4,11 +4,8 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3><b><i><u>Are you sure you want to remove activity: @Model.NameOfActivity?</u></i></b></h3>
 <div>
-    <h4>Activity</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -89,7 +86,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "AllActivities")
         </div>
     }
 </div>
