Changes made to get enrollment drop down partially working.

--- a/NewKidsActivityProject/Views/Shared/_Layout.cshtml
+++ b/NewKidsActivityProject/Views/Shared/_Layout.cshtml
@@ -70,6 +70,9 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Enrollments <span class="carousel"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li>@Html.ActionLink("Activity Enrollments", "Enrollments", "Activity")</li>
+                                <li>@Html.ActionLink("Enroll Child", "Create", "Enrollment")</li>
+                                <li>@Html.ActionLink("Edit Enrollment", "EditErollment", "Enrollment")</li>
+                                <li>@Html.ActionLink("Disenroll Child", "Delete", "Enrollment")</li>
                             </ul>
                         </li>
                     </ul>
