--- a/NewKidsActivityProject/Views/Enrollment/Create.cshtml
+++ b/NewKidsActivityProject/Views/Enrollment/Create.cshtml
@@ -16,7 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.KidID, "KidID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.KidID, "Child to enroll", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("KidID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.KidID, "", new { @class = "text-danger" })
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ActivityID, "ActivityID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ActivityID, "Activity", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ActivityID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ActivityID, "", new { @class = "text-danger" })
