--- a/NewKidsActivityProject/Views/Enrollment/Edit.cshtml
+++ b/NewKidsActivityProject/Views/Enrollment/Edit.cshtml
@@ -18,15 +18,15 @@
         @Html.HiddenFor(model => model.EnrollmentID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.KidID, "KidID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.KidID, "Child", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("KidID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.EditorFor(model => model.KidID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.KidID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ActivityID, "ActivityID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ActivityID, "Activity", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ActivityID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ActivityID, "", new { @class = "text-danger" })
