--- a/NewKidsActivityProject/Views/Shared/_Layout.cshtml
+++ b/NewKidsActivityProject/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li>@Html.ActionLink("Activity Enrollments", "Enrollments", "Activity")</li>
                                 <li>@Html.ActionLink("Enroll Child", "Create", "Enrollment")</li>
-                                <li>@Html.ActionLink("Edit Enrollment", "EditErollment", "Enrollment")</li>
+                                <li>@Html.ActionLink("Edit Enrollment", "EditEnrollment", "Enrollment")</li>
                                 <li>@Html.ActionLink("Disenroll Child", "Delete", "Enrollment")</li>
                             </ul>
                         </li>
