Basic Enrollment CRUD working. Need to tidy itup. Had to comment out new line included in DAL context though to get it to work.

--- a/NewKidsActivityProject/Views/Enrollment/Edit.cshtml
+++ b/NewKidsActivityProject/Views/Enrollment/Edit.cshtml
@@ -17,36 +17,37 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.EnrollmentID)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.KidID, "Child", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.KidID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.KidID, "", new { @class = "text-danger" })
-            </div>
+       
+    <div class="form-group">
+        @Html.LabelFor(model => model.KidID, "Child", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Kid.Fullname, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.KidID, "", new { @class = "text-danger" })
+        </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.ActivityID, "Activity", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("ActivityID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ActivityID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PaymentDue, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PaymentDue, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PaymentDue, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.ActivityID, "Activity", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Activity.NameOfActivity, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.ActivityID, "", new { @class = "text-danger" })
         </div>
     </div>
+
+    <div class="form-group">
+         @Html.LabelFor(model => model.PaymentDue, htmlAttributes: new { @class = "control-label col-md-2" })
+         <div class="col-md-10">
+             @Html.EditorFor(model => model.PaymentDue, new { htmlAttributes = new { @class = "form-control" } })
+             @Html.ValidationMessageFor(model => model.PaymentDue, "", new { @class = "text-danger" })
+         </div>
+    </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Save" class="btn btn-default" />
+                </div>
+            </div>
+</div>
 }
 
 <div>
