--- a/NewKidsActivityProject/Views/Activity/Delete.cshtml
+++ b/NewKidsActivityProject/Views/Activity/Delete.cshtml
@@ -29,7 +29,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TimeOfActivity)
+            @Html.DisplayFor(model => model.TimeOfActivityValue)
         </dd>
 
         <dt>
