--- a/NewKidsActivityProject/Views/Shared/_Layout.cshtml
+++ b/NewKidsActivityProject/Views/Shared/_Layout.cshtml
@@ -69,10 +69,10 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Enrollments <span class="carousel"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li>@Html.ActionLink("Activity Enrollments", "Enrollments", "Activity")</li>
+                                <li>@Html.ActionLink("List Activity Enrollments", "Enrollments", "Activity")</li>
                                 <li>@Html.ActionLink("Enroll Child", "Create", "Enrollment")</li>
-                                <li>@Html.ActionLink("Edit Enrollment", "EditEnrollment", "Enrollment")</li>
-                                <li>@Html.ActionLink("Disenroll Child", "Delete", "Enrollment")</li>
+                                <li>@Html.ActionLink("Register Payment", "EditEnrollment", "Enrollment")</li>
+                                <li>@Html.ActionLink("Disenroll Child", "DeleteEnrollment", "Enrollment")</li>
                             </ul>
                         </li>
                     </ul>
