Main change that may affect client side: added in new field, Places, in activity entity. Also renamed my local Db to WORKING.

--- a/NewKidsActivityProject/Views/Activity/Create.cshtml
+++ b/NewKidsActivityProject/Views/Activity/Create.cshtml
@@ -22,6 +22,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Places, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Places, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Places, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.DayOfActivity, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EnumDropDownListFor(model => model.DayOfActivity, htmlAttributes: new { @class = "form-control" })
