--- a/NewKidsActivityProject/Views/Activity/Details.cshtml
+++ b/NewKidsActivityProject/Views/Activity/Details.cshtml
@@ -19,6 +19,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Places)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Places)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.DayOfActivity)
         </dt>
 
