--- a/NewKidsActivityProject/Views/Activity/Edit.cshtml
+++ b/NewKidsActivityProject/Views/Activity/Edit.cshtml
@@ -41,10 +41,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TimeOfActivityValue, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TimeOfActivity, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TimeOfActivityValue, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TimeOfActivityValue, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.TimeOfActivity, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.TimeOfActivity, "", new { @class = "text-danger" })
             </div>
         </div>
 
