Attempt to deal with duplicate entries in Kid entity. Not working yet.

--- a/NewKidsActivityProject/Views/Kid/KidDetails.cshtml
+++ b/NewKidsActivityProject/Views/Kid/KidDetails.cshtml
@@ -42,8 +42,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.GuardianFirstName)
-            @Html.DisplayNameFor(model => model.GuardianLastName)
+            Guardian 
         </dt>
 
         <dd>
