Revert "Attempt to deal with duplicate entries in Kid entity. Not working yet."
This reverts commit 1ef0eca713fd85572119fdcc1d2a6bf904e464e6.

--- a/NewKidsActivityProject/Views/Kid/KidDetails.cshtml
+++ b/NewKidsActivityProject/Views/Kid/KidDetails.cshtml
@@ -42,7 +42,8 @@
         </dd>
 
         <dt>
-            Guardian 
+            @Html.DisplayNameFor(model => model.GuardianFirstName)
+            @Html.DisplayNameFor(model => model.GuardianLastName)
         </dt>
 
         <dd>
