Back in action. Constraint on PK in Activity Model identified as causing the problems with the data initializer.

--- a/NewKidsActivityProject/Views/Kid/KidDetails.cshtml
+++ b/NewKidsActivityProject/Views/Kid/KidDetails.cshtml
@@ -47,8 +47,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.GuardianFirstName)
-            @Html.DisplayFor(model => model.GuardianLastName)
+            Guardian
         </dd>
 
         <dt>
