--- a/NewKidsActivityProject/Views/Kid/AllKids.cshtml
+++ b/NewKidsActivityProject/Views/Kid/AllKids.cshtml
@@ -11,7 +11,7 @@
 <table class="table-bordered">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.FirstName)
+            Child's Name
         </th>
         <th>
             @Html.DisplayNameFor(model => model.DOB)
@@ -34,3 +34,12 @@
 
 
 </table>
+
+<p>  </p>
+<p>  </p>
+<p>  </p>
+<p>  </p>
+
+<p>
+    @Html.ActionLink("Add New Child", "Create")
+</p>
