--- a/NewKidsActivityProject/Views/Activity/EnrollmentsForActivity.cshtml
+++ b/NewKidsActivityProject/Views/Activity/EnrollmentsForActivity.cshtml
@@ -33,22 +33,26 @@
         <dd>
             @Html.DisplayFor(model => model.TimeOfActivity)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Enrollments)
-        </dt>
+        </dl>
+        <dl>
         <dd>
-            <table class="table">
+            <table class="table-bordered">
                 <tr>
-                    <th>Enrollments</th>
+                    <th>
+                        Child
+                    </th>
+                    <th>
+                        Paid
+                    </th>
                 </tr>
-                @foreach (var item in Model.Enrollments)
+                @foreach (var
+                    item in Model.Enrollments)
                 {
                     <tr>
                         <td>
                             @Html.DisplayFor(modelItem => item.Kid.FirstName)
                         </td>
-                        <td>
+                        <td style="text-align:center">                          <!--centre alignement of text box-->
                             @Html.DisplayFor(modelItem => item.PaymentDue)
                         </td>
                     </tr>
