--- a/NewKidsActivityProject/Views/Kid/AllKids.cshtml
+++ b/NewKidsActivityProject/Views/Kid/AllKids.cshtml
@@ -35,11 +35,9 @@
 
 </table>
 
-<p>  </p>
-<p>  </p>
-<p>  </p>
-<p>  </p>
 
-<p>
+<div>
+    <p>  </p>
     @Html.ActionLink("Add New Child", "Create")
-</p>
+</div>
+
