--- a/NewKidsActivityProject/Views/Kid/KidDetails.cshtml
+++ b/NewKidsActivityProject/Views/Kid/KidDetails.cshtml
@@ -65,23 +65,27 @@
         <dd>
             @Html.DisplayFor(model => model.ContactEmail)
         </dd>
+        </dl>
+    <dl>
         <dd>
-            <table class="table">
+            <table class="table-bordered">
                 <tr>
-                    <th>Enrollments</th>
+                    <th>Enrolled In</th>
                 </tr>
                 @foreach (var item in Model.Enrollments)
                 {
                     <tr>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Activity.NameOfActivity)
+                            @Html.DisplayFor(modelItem => item.Activity.NameOfActivity),
+                            @Html.DisplayFor(modelItem => item.Activity.DayOfActivity),
+                            @Html.DisplayFor(modelItem => item.Activity.TimeOfActivityValue)
                         </td>
                     </tr>
                 }
             </table>
         </dd>
-    </dl>
-</div>
+        </dl>
+   </div>
 <p>
     @Html.ActionLink("Back to List", "AllKids") | 
     @Html.ActionLink("Edit Child", "Edit", new { id = Model.KidID }) |
