--- a/NewKidsActivityProject/Views/Activity/AllActivities.cshtml
+++ b/NewKidsActivityProject/Views/Activity/AllActivities.cshtml
@@ -12,14 +12,19 @@
 <h1></h1>
 
 <table class="table-bordered">
-    <tr>
+    <tr class="active">
         <th>
-            <u>@Html.DisplayNameFor(Model => Model.NameOfActivity)</u>
-            <p>  </p>
+            @Html.DisplayNameFor(Model => Model.NameOfActivity)
         </th>
         <th>
-            <u>@Html.DisplayNameFor(Model => Model.Description)</u>
-            <p> </p>
+            @Html.DisplayNameFor(Model => Model.DayOfActivity)
+        </th>
+        <th>
+            @Html.DisplayNameFor(Model => Model.TimeOfActivityValue)
+        </th>
+        <th>
+            @Html.DisplayNameFor(Model => Model.Description)
+            
         </th>
     </tr>
    
@@ -29,11 +34,15 @@
            
             <td>
                 @Html.ActionLink(item.NameOfActivity, "ActivityDetails", new { id = item.ActivityID }) 
-                <p> </p>    
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DayOfActivity)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TimeOfActivityValue)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
-                <p> </p>
             </td>
         </tr>
     }
