--- a/NewKidsActivityProject/Views/Activity/Create.cshtml
+++ b/NewKidsActivityProject/Views/Activity/Create.cshtml
@@ -42,7 +42,7 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TimeOfActivityValue, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TimeOfActivityValue, "", new { @class = "text-danger" })
-                <span class="help-block">Format for time: hh:mm am/pm</span>
+                <span class="help-block">Format for time: hh:mm</span>
             </div>
         </div>
 
