--- a/NewKidsActivityProject/Views/Enrollment/Create.cshtml
+++ b/NewKidsActivityProject/Views/Enrollment/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h3><u>Enroll Child in Activity</u></h3>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
 
       <div class="form-horizontal">
-        <h4>Enrollment</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -49,7 +48,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Activity Enrollment List", "AllActivities")
 </div>
 
 @section Scripts {
