--- a/NewKidsActivityProject/Views/Kid/AllKids.cshtml
+++ b/NewKidsActivityProject/Views/Kid/AllKids.cshtml
@@ -27,7 +27,7 @@
                 @Html.ActionLink(item.FirstName + item.LastName, "KidDetails", new { id = item.KidID })       <!--combine first and second name for link-->
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DOB)
+                @Html.DisplayFor(modelItem => item.DOBInFormatWanted)
             </td>
         </tr>
     }
