A few last minute tidy ups before I hit the sack.

--- a/NewKidsActivityProject/Views/Activity/EnrollmentsForActivity.cshtml
+++ b/NewKidsActivityProject/Views/Activity/EnrollmentsForActivity.cshtml
@@ -23,7 +23,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TimeOfActivity)
+            @Html.DisplayFor(model => model.TimeOfActivityValue)
         </dd>
         </dl>
         <dl>
