--- a/NewKidsActivityProject/Views/Enrollment/Create.cshtml
+++ b/NewKidsActivityProject/Views/Enrollment/Create.cshtml
@@ -48,7 +48,7 @@
 }
 
 <div>
-    @Html.ActionLink("Activity Enrollment List", "AllActivities")
+    @Html.ActionLink("Activity Enrollment List", "Activity", "AllActivities")
 </div>
 
 @section Scripts {
