--- a/NewKidsActivityProject/Views/Enrollment/Duplicate.cshtml
+++ b/NewKidsActivityProject/Views/Enrollment/Duplicate.cshtml
@@ -7,5 +7,5 @@
 <h3>It appears that this child has already been enrolled in this Activity. Please check your records.</h3>
 
 <div>
-    @Html.ActionLink("List Activity Enrollments", "Enrollments","Enrollment")
+    @Html.ActionLink("List Activity Enrollments", "Activity", "Enrollments")
 </div>
