--- a/NewKidsActivityProject/Views/Activity/Create.cshtml
+++ b/NewKidsActivityProject/Views/Activity/Create.cshtml
@@ -103,7 +103,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "AllActivities")
+    @Html.ActionLink("Go to Activity List", "AllActivities")
 </div>
 
 @section Scripts {
