--- a/NewKidsActivityProject/Views/Activity/Duplicate.cshtml
+++ b/NewKidsActivityProject/Views/Activity/Duplicate.cshtml
@@ -7,7 +7,7 @@
 <h3>It appears that this Activity is already listed. Please check your records.</h3>
 
 <div>
-    @Html.ActionLink("List all Activities", "AllActivities")
+    @Html.ActionLink("GO to Activity List", "AllActivities")
 </div>
 
 
