--- a/NewKidsActivityProject/Views/Activity/EnrollmentsForActivity.cshtml
+++ b/NewKidsActivityProject/Views/Activity/EnrollmentsForActivity.cshtml
@@ -57,6 +57,6 @@
 <p> Total enrollments:  @ViewBag.NumberOfEnrollments <br/> Places available:  @ViewBag.PlacesLeft</p>
 
 <p>
-     @Html.ActionLink("Back to List", "Enrollments") |
+     @Html.ActionLink("Return to Enrollments List", "Enrollments") |
      @Html.ActionLink("Enroll in activity", "Create", "Enrollment")
 </p>
