--- a/NewKidsActivityProject/Views/Activity/Edit.cshtml
+++ b/NewKidsActivityProject/Views/Activity/Edit.cshtml
@@ -107,7 +107,7 @@
 
 <div>
     @Html.ActionLink("Edit another Activity", "EditActivity")|
-    @Html.ActionLink("Back to List", "AllActivities")
+    @Html.ActionLink("Go to Activity List", "AllActivities")
 </div>
 
 @section Scripts {
