--- a/NewKidsActivityProject/Views/Enrollment/Delete.cshtml
+++ b/NewKidsActivityProject/Views/Enrollment/Delete.cshtml
@@ -4,13 +4,21 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3><u>Are you sure you want to <i>Disenroll</i> @Model.Kid.FirstName @Model.Kid.LastName from @Model.Activity.NameOfActivity?</u></h3>
 <div>
     <h4>Enrollment</h4>
     <hr />
     <dl class="dl-horizontal">
+        
+        <dt>
+            Child
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Kid.FirstName)
+            @Html.DisplayFor(model => model.Kid.LastName)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Activity.NameOfActivity)
         </dt>
@@ -20,20 +28,22 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Kid.FirstName)
+            @Html.DisplayNameFor(model => model.Activity.DayOfActivity)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Kid.FirstName)
+            @Html.DisplayFor(model => model.Activity.DayOfActivity)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PaymentDue)
+            @Html.DisplayNameFor(model => model.Activity.TimeOfActivity)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PaymentDue)
+            @Html.DisplayFor(model => model.Activity.TimeOfActivityValue)
         </dd>
+
+        
 
     </dl>
 
@@ -41,8 +51,10 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Disenroll" class="btn btn-default" />
         </div>
     }
 </div>
+
+<br/>
+<div>@Html.ActionLink("Enrollments List", "DeleteEnrollment")</div>
