--- a/NewKidsActivityProject/Views/Enrollment/DeleteEnrollment.cshtml
+++ b/NewKidsActivityProject/Views/Enrollment/DeleteEnrollment.cshtml
@@ -4,22 +4,25 @@
     ViewBag.Title = "DeleteEnrollment";
 }
 
-<h3><u>Select enrollment to edit</u></h3>
-<h4>  </h4>
-<table class="table">
+<h3><u>Select enrollment to be removed</u></h3><br/>
+
+<table class="table-bordered">
     <tr>
+        
         <th>
-            @Html.DisplayNameFor(model => model.Activity.NameOfActivity)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Kid.FirstName)
-            @Html.DisplayNameFor(model => model.Kid.LastName)
+            Child
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Kid.DOB)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PaymentDue)
+            @Html.DisplayNameFor(model => model.Activity.NameOfActivity)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Activity.DayOfActivity)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Activity.TimeOfActivityValue)
         </th>
         <th></th>
     </tr>
@@ -28,22 +31,26 @@
     {
         <tr>
             <td>
+                @Html.ActionLink(item.Kid.FirstName + item.Kid.LastName, "Delete", new { id = item.EnrollmentID })
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Kid.DOBInFormatWanted)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Activity.NameOfActivity)
             </td>
             <td>
-                @Html.ActionLink(item.Kid.FirstName + item.Kid.LastName, "Delete", new { id = item.EnrollmentID })
-            <td>
-                @Html.DisplayFor(modelItem => item.Kid.DOB)
+                @Html.DisplayFor(modelItem => item.Activity.DayOfActivity)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PaymentDue)
+                @Html.DisplayFor(modelItem => item.Activity.TimeOfActivityValue)
             </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.EnrollmentID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.EnrollmentID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.EnrollmentID })
-            </td>
+            
         </tr>
     }
 
 </table>
+<br/>
+<div>
+      @Html.ActionLink("Go to Enrollments List", "Enrollments", "Activity")
+</div>
