--- a/NewKidsActivityProject/Views/Enrollment/Edit.cshtml
+++ b/NewKidsActivityProject/Views/Enrollment/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h3><u>Tick Payment Made to register payment</u></h3>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Enrollment</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.EnrollmentID)
@@ -51,7 +50,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Go to Enrollments List", "EditEnrollment")
 </div>
 
 @section Scripts {
