--- a/NewKidsActivityProject/Views/Enrollment/EditEnrollment.cshtml
+++ b/NewKidsActivityProject/Views/Enrollment/EditEnrollment.cshtml
@@ -4,16 +4,15 @@
     ViewBag.Title = "EditEnrollment";
 }
 
-<h3><u>Select enrollment to edit</u></h3>
+<h3><u>Select enrollment to register payment</u></h3>
 <h4>  </h4>
-<table class="table">
+<table class="table-bordered">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Activity.NameOfActivity)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Kid.FirstName)
-            @Html.DisplayNameFor(model => model.Kid.LastName)
+           Child
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Kid.DOB)
@@ -33,17 +32,12 @@
             <td>
                 @Html.ActionLink(item.Kid.FirstName + item.Kid.LastName, "Edit", new { id = item.EnrollmentID })                
             <td>
-                @Html.DisplayFor(modelItem => item.Kid.DOB)
+                @Html.DisplayFor(modelItem => item.Kid.DOBInFormatWanted)
             </td>
-            <td>
+            <td class="text-center">
                 @Html.DisplayFor(modelItem => item.PaymentDue)
             </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.EnrollmentID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.EnrollmentID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.EnrollmentID })
-            </td>
-        </tr>
+         </tr>
     }
 
 </table>
