--- a/NewKidsActivityProject/Views/Enrollment/EnrollChild.cshtml
+++ b/NewKidsActivityProject/Views/Enrollment/EnrollChild.cshtml
@@ -1,23 +1,26 @@
 ﻿@model NewKidsActivityProject.Models.Enrollment
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "EnrollChild";
 }
 
-<h3><u>Enroll Child in Activity</u></h3>
+<h2>EnrollChild</h2>
 
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-      <div class="form-horizontal">
+    <div class="form-horizontal">
+        <h4>Enrollment</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.EnrollmentID)
+
+
         <div class="form-group">
-            @Html.LabelFor(model => model.KidID, "Child to enroll", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.KidID, "Child", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("KidID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.EditorFor(model => model.Kid.Fullname, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.KidID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -40,17 +43,17 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
-
 }
 
 <div>
-    @Html.ActionLink("Activity Enrollment List", "Enrollments", "Activity")
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
