Home page looks good now.

--- a/NewKidsActivityProject/Content/darkly.css
+++ b/NewKidsActivityProject/Content/darkly.css
@@ -4967,7 +4967,7 @@ a.badge:focus {
   padding-bottom: 30px;
   margin-bottom: 30px;
   color: inherit;
-  background-color: #303030;
+  background-color: dimgrey;
 }
 .jumbotron h1,
 .jumbotron .h1 {
@@ -4988,7 +4988,7 @@ a.badge:focus {
   padding-right: 15px;
 }
 .jumbotron .container {
-  max-width: 100%;
+  max-width: 100%;                   /*CHANGED FROM 100%*/
 }
 @media screen and (min-width: 768px) {
   .jumbotron {
