--- a/NewKidsActivityProject/Views/Home/Index.cshtml
+++ b/NewKidsActivityProject/Views/Home/Index.cshtml
@@ -3,27 +3,36 @@
 }
 
 <div class="jumbotron">
-    <h1>Children's Activity Planner</h1>
-    <p class="lead">A brief description of the service can go here</p>
-    <!---<p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>--->
+    <div class="container">
+    <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 pull-right ">
+    <img vspace="18" class="jumbotronwidth" alt="" src="~/Content/images/miniproject_img1.jpg">
+    </div>
+        
+    <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7">
+        <h1>Children's Activity Planner</h1>
+        <p>Use this dynamic service to easily track activities, children and enrollments</p> <!---Just linking to image file for the moment -->
+        <p><a href="~/Content/images/miniproject_img1.jpg" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    </div>
+        </div>
+
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Sporting Activities</h2>
+    <div class="col-md-4 right">
+        <h2>Activities</h2>
         <p>
-            Information about the sports activities available could go here.
+            Check out all the activities available
         </p>
-        <!---<p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>--->
+        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>    <!--use URL for AllActivities-->
     </div>
-    <div class="col-md-4">
-        <h2>Arts and crafts</h2>
-        <p>Details of the creative activities could go here.</p>
-        <!----<p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>---LINK TO SOMETHING APPROPRIATE--->
+    <div class="col-md-4 text-center">
+        <h2>Children</h2>
+        <p>Maintain childrens register</p>
+        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>   <!--use URL for AllKids-->
     </div>
-    <div class="col-md-4">
-        <h2>Music and the Performing Arts</h2>
-        <p>Details of music and drama classes.</p>
-        <!---<p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>--->
+    <div class="col-md-4 text-right">
+        <h2>Enrollments</h2>
+        <p>Manage activity enrollments</p>
+        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>   <!--use URL for Enrollments-->
     </div>
 </div>
